--- a/config.toml
+++ b/config.toml
@@ -11,3 +11,4 @@ apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
 included-patches = "'Enable slide to seek' 'Custom branding' 'Change header' 'Remove player controls background'"
 cli-source = "ReVanced/revanced-cli"
 patches-source = "ReVanced/revanced-patches"
+integrations-source = "ReVanced/revanced-integrations"
