--- a/config.toml
+++ b/config.toml
@@ -12,3 +12,5 @@ included-patches = "'Enable slide to seek' 'Custom branding' 'Change header' 'Re
 cli-source = "ReVanced/revanced-cli"
 patches-source = "ReVanced/revanced-patches"
 integrations-source = "ReVanced/revanced-integrations"
+cli-version = "dev"
+patches-version = "dev"
