--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ parallel-jobs = 1
 
 [YouTube]
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
-included-patches = "'Predictive back gesture' 'Export internal data documents provider' 'Enable Android debugging' 'Remove screen capture restriction' 'Override certificate pinning' 'Remove screenshot restriction' 'Hide mock location' 'Export all activities' 'Enable slide to seek' 'Custom branding' 'Change header' 'Remove player controls background'"
+included-patches = "'Predictive back gesture' 'Disable Pairip license check' 'Export internal data documents provider' 'Enable Android debugging' 'Remove screen capture restriction' 'Override certificate pinning' 'Remove screenshot restriction' 'Hide mock location' 'Export all activities' 'Enable slide to seek' 'Custom branding' 'Change header' 'Remove player controls background'"
 cli-source = "ReVanced/revanced-cli"
 patches-source = "ReVanced/revanced-patches"
 cli-version = "dev"
